# TGSCodeV3

./: CMakeLists.txt  Degree.C  StepTree.txt  angleCal  angleCal.C  angledata.temp  build.sh  build.sh~  degree.txt  input.txt~  main.cc  main.cc~  main.old  readme  run.mac  run1.mac  run2.mac  vis.mac
inc/: sg4ActRunFreeIO.hh  sg4ActRunNt.hh  sg4ActTrackingFreeIO.hh  sg4ActTrackingNt.hh  sg4ActionInitialization.hh  sg4Detector.hh  sg4Detector.hh~  sg4EMField.hh  sg4EMField.hh~  sg4Physics.hh
src/: readme  sg4ActRunFreeIO.cc  sg4ActRunNt.cc  sg4ActTrackingFreeIO.cc  sg4ActTrackingNt.cc  sg4ActionInitialization.cc  sg4Detector.cc  sg4Detector.copy  sg4EMField.cc  sg4Physics.cc
